--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "⚛️ A CSS-only spinners in React components",
   "main": "index.js",
   "scripts": {
+    "build": "rm -rf dist && rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint **/*.js",
     "lint:fix": "prettier-eslint $PWD/**/*.js --write"
@@ -14,7 +15,10 @@
     }
   },
   "lint-staged": {
-    "*.js": ["npm run lint:fix", "git add"]
+    "*.js": [
+      "npm run lint:fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -31,15 +35,23 @@
   },
   "homepage": "https://github.com/h-ARTS/react-easy-spinners#readme",
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
     "eslint": "^7.2.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.10",
     "prettier-eslint": "^11.0.0",
-    "prettier-eslint-cli": "^5.0.0"
+    "prettier-eslint-cli": "^5.0.0",
+    "rollup": "^2.15.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^6.1.0"
   }
 }
