--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-easy-spinners",
   "version": "1.0.0",
   "description": "⚛️ A CSS-only spinners in React components",
-  "main": "index.js",
+  "main": "dist/bundle.cjs.js",
+  "module": "dist/bundle.esm.js",
+  "sideEffects": false,
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -52,6 +54,13 @@
     "rollup": "^2.15.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^6.1.0"
+  },
+  "peerDependencies": {
+    "react": ">=15"
+  },
+  "engines": {
+    "node": ">=12"
   }
 }
