Add jest snapshot tests

--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,20 @@
 {
   "presets": [
-    ["@babel/env", {
-      "modules": false,
-      "targets": {
-        "browsers": "> 0.25%, ie 11, not op_mini all, not dead",
-        "node": 12
+    [
+      "@babel/env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": "> 0.25%, ie 11, not op_mini all, not dead",
+          "node": 12
+        }
       }
-    }],
+    ],
     "@babel/react"
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": ["@babel/env", "@babel/react"]
+    }
+  }
 }
