--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:coveralls": "jest --coverage && coveralls < coverage/lcov.info",
     "test:staged": "jest --findRelatedTests",
     "lint": "eslint **/*.js",
     "lint:fix": "prettier-eslint $PWD/**/*.js --write",
@@ -53,6 +54,7 @@
     "@storybook/react": "^5.3.19",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
+    "coveralls": "^3.1.0",
     "eslint": "^7.2.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.2",
