--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,9 @@ language: node_js
 node_js:
   - node
 
-install:
-  - npm ci
-
 script:
   - npm run lint
-  - npm test:coveralls
+  - npm run test:coveralls
 
 notifications:
   email: false
